fix: color on safari dark

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,11 +37,11 @@
   }
 
   .dark {
-    --background: 0 0 0%;
+    --background: 0 0% 0%;
     --foreground: 0 0% 98%;
-    --card: 0 0 0%;
+    --card: 0 0% 0%;
     --card-foreground: 0 0% 98%;
-    --popover: 0 0 0%;
+    --popover: 0 0% 0%;
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
     --primary-foreground: 240 5.9% 10%;
